methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:11: error: not found: value False
      while(isFacingTrail==False) {
                           ^